--- a/workflows/main.yml
+++ b/workflows/main.yml
@@ -1,5 +1,5 @@
 
-name: Demo GitHub Actions Workflow
+name: Call ObservePoint Audit
 
 on:
   push:
@@ -39,8 +39,8 @@ jobs:
       - name: Deploy
         run: sleep 2
 
-  run_observepoint_audits:
-    name: Run ObservePoint Audits
+  run_observepoint_audit:
+    name: Run ObservePoint Audit
     runs-on: ubuntu-latest
     needs:
       - deploy
@@ -48,15 +48,16 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Start ObservePoint audits
+      - name: Start ObservePoint audit
         uses: ./.github/actions/run_op_audit
         with:
-          audit_ids: '230171'
+          audit_id: '230171'
           starting_urls: 'https://dominos.ua/uk/kyiv,https://dominos.ua/'
-          observepoint_api_key: ${{ secrets.OBSERVEPOINT_API_KEY }}
+          op_api_key: ${{ secrets.OP_API_KEY }}
           callback_owner: ${{ github.repository_owner }}
           callback_repo: ${{ github.event.repository.name }}
           callback_workflow_file: 'audit-complete.yml'
           callback_ref: 'main'
+          callback_token: ${{ secrets.GITHUB_TOKEN }}
           pr_number: ${{ github.event.pull_request.number }}
           commit_sha: ${{ github.sha }}
