GitHub Actions integration with ObservePoint

--- a/actions/run_observepoint_audit/action.yaml
+++ b/actions/run_observepoint_audit/action.yaml
@@ -84,7 +84,7 @@ runs:
           --arg commitSha                 "${{ inputs.commit_sha }}" \
           '{
             startingUrls: $startingUrls,
-            callbackWorkflowEventType: callbackWorkflowEventType,
+            callbackWorkflowEventType: $callbackWorkflowEventType,
             callbackContext: {
               owner:          $owner,
               repo:           $repo,
