--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,5 @@
 
-name: ObservePoint Audit (v3)
+name: ObservePoint-Start-Audit
 
 description: |
   A GitHub Action that automatically triggers ObservePoint audits in CI/CD pipelines with secure callback handling.
