--- a/actions/run_observepoint_audit/action.yaml
+++ b/actions/run_observepoint_audit/action.yaml
@@ -1,8 +1,12 @@
 
-name: ObservePoint Audit (v3)
+name: ObservePoint-Start-Audit
 
 description: |
   A GitHub Action that automatically triggers ObservePoint audits in CI/CD pipelines with secure callback handling.
+
+branding:
+  icon: bar-chart-2
+  color: yellow
 
 # ------------------------------------------------------------------------------
 # INPUTS
